<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tableGreen"
    tools:context=".activities.MealsHistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorDialogs"
        android:elevation="5dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="snap">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/meals_history_toolbar_title"
            android:textColor="@color/colorActivityBackground"
            android:textSize="@dimen/calculate_or_enter_macros_activity_toolbar_title_size" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:textColor="@color/colorActivityBackground"
        android:textSize="@dimen/calculate_or_enter_macros_activity_toolbar_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorActivityBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_month" />

    <LinearLayout
        android:id="@+id/defaultRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/table_row_padding"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/meal_history_table_date_default"
            android:textColor="@color/colorYellowMain"
            android:textSize="@dimen/table_item_macros_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/meal_history_table_calories_default"
            android:textColor="@color/colorYellowMain"
            android:textSize="@dimen/table_item_macros_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/meal_history_table_protein_default"
            android:textColor="@color/colorYellowMain"
            android:textSize="@dimen/table_item_macros_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/meal_history_table_carbs_default"
            android:textColor="@color/colorYellowMain"
            android:textSize="@dimen/table_item_macros_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/meal_history_table_fats_default"
            android:textColor="@color/colorYellowMain"
            android:textSize="@dimen/table_item_macros_size"
            android:textStyle="bold" />

    </LinearLayout>


    <TableLayout
        android:id="@+id/historyTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defaultRow" />


</androidx.constraintlayout.widget.ConstraintLayout>